--- a/src/LoggedInRouter.css
+++ b/src/LoggedInRouter.css
@@ -1,3 +1,22 @@
 .menu-and-container-holder {
   background-color: cadetblue;
 }
+
+.main-container {
+  padding: 0.0625em 1em;
+  margin-left: 12.5em;
+  height: 100%;
+
+  /* border: 2px solid red;
+  border-radius: 5px;
+  background-color: yellow; */
+}
+
+/*******MEDIA QUERIES **********/
+@media screen and (max-width: 500px) {
+  .main-container {
+    position: relative;
+    overflow-x: hidden;
+    margin: 0;
+  }
+}
