started working on words

--- a/src/articles/reader-header.css
+++ b/src/articles/reader-header.css
@@ -15,7 +15,7 @@ h1 {
   justify-content: space-around;
 }
 
-p {
+.p-reader-header {
   font-family: Montserrat;
   font-style: normal;
   font-weight: normal;
