--- a/src/exercises/recognize/FindWordInContext.css
+++ b/src/exercises/recognize/FindWordInContext.css
@@ -11,6 +11,17 @@
   justify-content: space-around;
   align-items: flex-end;
   margin-top: 3em;
+  flex-wrap: wrap;
+}
+
+.bottomInput button {
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+}
+.bottomInput input {
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  text-align: center;
 }
 
 .highlightedWord {
@@ -20,4 +31,15 @@
 
 .contextExample {
   margin-top: 2em;
+  margin-left: 2em;
+  margin-right: 2em;
 }
+/* 
+@media screen and (max-width: 240px) {
+  .bottomInput {
+    background-color: plum;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+} */
