--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,3 @@
-/* body {
-  font-family: Montserrat;
-  margin: auto;
-  width: 100%;
-  padding: 0;
-  overflow-y: scroll;
-}
-
-html {
-  overflow-y: scroll;
-  display: block;
+/* html {
+  font-size: 16px;
 } */
