--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  /* Set a style for all buttons */
+  button {
+    background-color: #FFBB54;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  button.current {
+    box-shadow: 0 0 0 2px white,
+                0 0 0 4px black;
   }
-  to {
-    transform: rotate(360deg);
+
+  .border {
+    border: 3px solid #f1f1f1;
+    padding: 5%;
+    margin: 1%;
   }
+
+  /* Full-width inputs */
+input[type=text], input[type=password] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+  }
+
+  /* Center the avatar image inside this container */
+.imgcontainer {
+    text-align: center;
+    margin: 1px 0 12px 0;
+  }
+
+
+  /* Avatar image */
+img.logo {
+    width: 40%;
+    border-radius: 50%;
+  }
+
+  body{
+    width: 300px;
+    height: 450px;
+    padding-bottom: 20px;
 }
