moved css out of main.js

--- a/public/modal.css
+++ b/public/modal.css
@@ -7,6 +7,16 @@
     all: revert;
 }
 
+#myDialog{
+    font-size: 20px;
+    height:90%;
+    width: 70%;
+    border: none;
+    background-color:white;
+    position: fixed;
+    box-shadow: 0px 12px 48px rgba(29, 5, 64, 0.32);
+}
+
 .modal::-webkit-scrollbar {
     width: 8px;
 }
