--- a/public/modal.css
+++ b/public/modal.css
@@ -1,14 +1,35 @@
 .modal::backdrop {
     background: rgba(255,208,71);
-  }
+}
 
 .modal,
 .modal *{
     all: revert;
 }
 
+#myDialog h1{
+    font-size: 1.9em !important;
+}
+
+#myDialog h2{
+    font-size: 1.7rem !important;
+}
+
+#myDialog h3{
+    font-size: 1.5rem !important;
+}
+
+#myDialog h4, h5, h6{
+    font-size: 1.4rem !important;
+}
+
+#myDialog p{
+    font-size: 1.2rem!important;
+}
+
+
 #myDialog{
-    font-size: 20px;
+    font-family: Arial, sans-serif;
     height:90%;
     width: 70%;
     border: none;
