--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@
   }
 
   /* Full-width inputs */
-input[type=text], input[type=password] {
+input[type=email], input[type=password] {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
