--- a/public/modal.css
+++ b/public/modal.css
@@ -14,5 +14,5 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(255,208,71);
+    background-color: rgba(255,208,71) !important;
   }
