--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,8 @@
     border: none;
     cursor: pointer;
     width: 100%;
+    font-size: 1.0rem !important;
+    font-weight: 600;
   }
   
   button.current {
@@ -47,4 +49,15 @@ img.logo {
     width: 300px;
     height: 310px;
     padding-bottom: 20px;
+    font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+    "Helvetica Neue", sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+p {
+  font-size: 1.0rem !important;
+  color: black;
+  text-align: center;
 }
