--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
     "Helvetica Neue", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    
+    margin: 2px !important;
 }
 
 p {
