--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+* {
+  font-family: 'Neue Haas Grotesk Display Pro', sans-serif !important;
+}
+
 body {
   margin: 0;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI",
